--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eventtask",
+  "name": "testingtask",
   "version": "1.0.0",
-  "description": "![CI](https://github.com/Squid90/eventTask/actions/workflows/web.yml/badge.svg)",
+  "description": "![CI](https://github.com/Squid90/testingTask/actions/workflows/web.yml/badge.svg)",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
