--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^2.8.8",
+    "webdriverio": "^8.26.1",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
