--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint . --fix",
     "test": "jest",
+    "e2e": "jest --testPathPattern=./e2e/ --runInBand",
     "coverage": "jest --coverage",
     "preshow:coverage": "npm run coverage",
     "show:coverage": "live-server coverage/lcov-report",
@@ -17,10 +18,10 @@
   "author": "coursar",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.22.5",
-    "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "babel-loader": "^9.1.2",
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "eslint": "^7.32.0",
@@ -35,6 +36,7 @@
     "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^2.8.8",
+    "puppeteer": "^21.6.1",
     "webdriverio": "^8.26.1",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
